Bug 214509 - [WebGL2] Fix validation of pixel unpack parameters
Summary: [WebGL2] Fix validation of pixel unpack parameters
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGL (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Kenneth Russell
URL:
Keywords: InRadar
Depends on: 209516
Blocks:
  Show dependency treegraph
 
Reported: 2020-07-17 16:26 PDT by Kenneth Russell
Modified: 2020-07-17 18:39 PDT (History)
7 users (show)

See Also:


Attachments
Patch (1.71 KB, patch)
2020-07-17 16:27 PDT, Kenneth Russell
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Kenneth Russell 2020-07-17 16:26:03 PDT
In Bug 209516 WebGL 2.0-specific validation was added to ANGLE for pixel unpack parameters. While upstreaming that fix in http://crbug.com/angleproject/4849 a small error was found which should be merged into WebKit as well.
Comment 1 Kenneth Russell 2020-07-17 16:27:40 PDT
Created attachment 404617 [details]
Patch
Comment 2 EWS Watchlist 2020-07-17 16:28:37 PDT
Note that there are important steps to take when updating ANGLE. See http://trac.webkit.org/wiki/UpdatingANGLE
Comment 3 Kenneth Russell 2020-07-17 17:24:31 PDT
Comment on attachment 404617 [details]
Patch

ANGLE patch has landed upstream. CQ'ing again.
Comment 4 EWS 2020-07-17 18:38:05 PDT
Committed r264562: <https://trac.webkit.org/changeset/264562>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 404617 [details].
Comment 5 Radar WebKit Bug Importer 2020-07-17 18:39:14 PDT
<rdar://problem/65753880>