[WebGL2] Fix validation of pixel unpack parameters https://bugs.webkit.org/show_bug.cgi?id=214509

Patch by Kenneth Russell <kbr@chromium.org> on 2020-07-17
Reviewed by Dean Jackson.

Fix small error discovered while upstreaming the previous fix to
the ANGLE project.

* src/libANGLE/validationES3.cpp:
(gl::ValidateES3TexImageParametersBase):

Canonical link: https://commits.webkit.org/227310@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264562 268f45cc-cd09-0410-ab3c-d52691b4dbfc